[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project]
name = "oracle-utils"
dynamic = ["version"]
authors = [
  { name="Josh Price", email="joshua.price@intellitrans.com" },
]
description = "A utility for Oracle database interaction and SQL transformation using sqlglot"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Database",
]
dependencies = [
    "oracledb>=2.0.0",
    "sqlglot>=20.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
packages = ["oracle_utils"]